--- a/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_my_promotion.html
+++ b/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_my_promotion.html
@@ -10,7 +10,7 @@
 <link type="text/css" rel="stylesheet" href="/markettools_static/distribution/css/m_weixin_style_v1.css">
 <style>
 .xui-icon-person {
-	background: url('{{ user_icon }}') no-repeat;
+	background: #ddd url('{{ user_icon }}') no-repeat;
 }
 .xui-icon-flag {
 	background: url('/markettools_static/distribution/images/myPromotion-icon-flag.png') no-repeat;
@@ -67,6 +67,9 @@ function activeProcess(hasGet, totalGet) {
 	var widthPercentage = Math.round(hasGet/totalGet*100);
 	flag.style.left = (widthPercentage-1) + '%';
 	processBar.style.width = widthPercentage + '%';
+	if (widthPercentage == 0) {
+		processBar.style.borderStyle = 'none';
+	}
 }
 activeProcess({{ will_return_reward }}, {{ commission_return_standard }});
 
