--- a/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_process.html
+++ b/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_process.html
@@ -9,7 +9,12 @@
 {% block css %}
 <link type="text/css" rel="stylesheet" href="/markettools_static/distribution/css/m_weixin_style_v1.css">
 <style>
-
+.xui-no-vip {
+    padding: 80px;
+    font-size: 2rem;
+    text-align: center;
+    color: #999;
+}
 </style>
 {% endblock %}
 {% block content-panel %}
@@ -48,6 +53,10 @@
                         <li class="xui-step cur">已完成</li>
                     </ul>
             {% endfor %}
+        {% endif %}
+
+        {% if not cur_list and not prev_lists %}
+            <p class="xui-no-vip">暂时没有会员记录</p>
         {% endif %}
     </div>
 {% endblock %}
