--- a/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_weixin_promotion.html
+++ b/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_weixin_promotion.html
@@ -22,8 +22,8 @@
 		<div class="xui-qrCode-content">
 			<i class="icon-down icon-moveDown"></i>
 			<div class="xui-quCode-box">
-				<!-- <img src="{{ weixin_code }}" /> -->
-				<img src="/markettools_static/distribution/images/promotion-shadow.png" />
+				<img src="{{ weixin_code }}" />
+				<!-- <img src="/markettools_static/distribution/images/promotion-shadow.png" /> -->
 			</div>
 			<div class="xui-shadow-box">
 				<img src="/markettools_static/distribution/images/promotion-shadow.png" />
