--- a/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery.html
+++ b/weapp/apps/customerized_apps/scanlottery/templates/webapp/m_scanlottery.html
@@ -97,9 +97,9 @@
         font-weight: bold;
     }
     .wui-first-prize {
-        background: url("/termite_static/img/component/scanlottery/roulette_dialog_bg1.png") no-repeat;
+        background: url("/termite_static/img/component/scanlottery/roulette_dialog_bg1.jpg") no-repeat;
         background-size: 100% 100%;
-        height: 328px;
+        height: 360px;
         color: #fff;
         font-size: 1.1rem;
     }
