--- a/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_weixin_promotion.html
+++ b/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_weixin_promotion.html
@@ -22,14 +22,13 @@
 		<div class="xui-qrCode-content">
 			<i class="icon-down icon-moveDown"></i>
 			<div class="xui-quCode-box">
-				<img src="{{ weixin_code }}" />
-				<!-- <img src="/markettools_static/distribution/images/promotion-shadow.png" /> -->
+				<img src="{{ weixin_code }}" data-allow-autoplay="false" />
 			</div>
 			<div class="xui-shadow-box">
-				<img src="/markettools_static/distribution/images/promotion-shadow.png" />
+				<img src="/markettools_static/distribution/images/promotion-shadow.png" data-allow-autoplay="false" />
 			</div>
 			<p class="xui-nickname">{{ nick_name }}</p>
-			<div class="xui-slogan"><img src="/markettools_static/distribution/images/promotion-slogan.png" /></div>
+			<div class="xui-slogan"><img src="/markettools_static/distribution/images/promotion-slogan.png" data-allow-autoplay="false" /></div>
 		</div>
 	</div>
 </div>
