--- a/weapp/weixin2/templates/weixin/channels/channel_distribution_clearing.html
+++ b/weapp/weixin2/templates/weixin/channels/channel_distribution_clearing.html
@@ -199,5 +199,12 @@
             };
             W.dialog.showDialog('W.dialog.mall.ChannelDistributionDetail', options);
         });
+
+    $(document).ready(function() {
+        var qrcodeView = new W.view.weixin.DistributionsClear({
+            el: $("body")
+        });
+    });
+
     </script>
 {% endblock %}
