--- a/weapp/weixin2/templates/weixin/channels/channel_distribution_clearing.html
+++ b/weapp/weixin2/templates/weixin/channels/channel_distribution_clearing.html
@@ -153,7 +153,7 @@
 							        ${qrcode.extraction_money}
 							    </td>
 							    <td>
-							        <select>
+							        <select class='xa-changeStatus' data-id='${qrcode.id}'>
 							            <option value=0 {{if qrcode.status == 0}}selected="selected"{{/if}}>无状态</option>
 							            <option value=1 {{if qrcode.status == 1}}selected="selected"{{/if}}>等待审核</option>
 							            <option value=2 {{if qrcode.status == 2}}selected="selected"{{/if}}>正在返现中</option>
@@ -182,6 +182,7 @@
         $(document).delegate('.xa-viewLog', 'click', function(event) {
 
             var qrocdeId = $(this).data('qrcode_id');
+            console.log(qrocdeId)
             options = {
                 qrocdeId: qrocdeId
             };
@@ -190,8 +191,8 @@
             W.dialog.showDialog('W.dialog.mall.ChannelDistributionLog', options);
         });
         $(document).delegate('.xa-viewDetail', 'click', function(event) {
-
             var qrocdeId = $(this).data('qrcode_id');
+            console.log(qrocdeId)
             options = {
                 qrocdeId: qrocdeId
             };
