--- a/weapp/weixin2/templates/weixin/channels/channel_distribution_clearing.html
+++ b/weapp/weixin2/templates/weixin/channels/channel_distribution_clearing.html
@@ -25,6 +25,7 @@
         }
         .xui-link {
             display: inline-block;
+            cursor: pointer;
         }
         .ml100 {
             margin-left: 100px;
