--- a/weapp/mall/templates/mall/editor/offshelf_products.html
+++ b/weapp/mall/templates/mall/editor/offshelf_products.html
@@ -80,7 +80,7 @@
 		<thead>
 			<tr>
 				<th width="308">商品信息</th>
-				<th width="100">{{if data.data.mall_type == 1}}供货商{{else}}条码{{/if}}</th>
+				<th width="100">{{if data.data.mall_type > 0}}供货商{{else}}条码{{/if}}</th>
 				<th width="100">分组</th>
 				<th width="105">商品价格（元）</th>
 				<th width="50">库存</th>
@@ -124,7 +124,7 @@
 						</div>
 					</td>
 					<td>
-					{{if data.data.mall_type == 1 }}
+					{{if data.data.mall_type > 0 }}
 						{{if product.is_sync }}<i class="xui-icon-sync">同</i>{{/if}}
 						${product.store_name}
 					{{else}}
