样式缺少百分号

--- a/weapp/weixin2/templates/weixin/channels/channel_distribution_clearing.html
+++ b/weapp/weixin2/templates/weixin/channels/channel_distribution_clearing.html
@@ -162,7 +162,7 @@
 							        ${qrcode.commission_return_standard}
 							    </td>
 							    <td>
-							        ${qrcode.commission_rate}
+							        ${qrcode.commission_rate}%
 							    </td>
 							    <td>
 							        ${qrcode.will_return_reward}
