--- a/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_vip.html
+++ b/weapp/market_tools/tools/distribution/templates/distribution/webapp/m_vip.html
@@ -26,7 +26,7 @@
 			<li class="xui-vip-list bg_fff">
 				<div class="xui-vip-header">
 					<p class="xui-nickname">{{ vip_list.nick_name }}</p>
-					<span>关注时间：{{ vip_list.created_at|date:"Y/m/d H:i" }}</span>
+					<span>扫码时间：{{ vip_list.created_at|date:"Y/m/d H:i" }}</span>
 				</div>
 				<div class="xui-vip-content">
 					<p class="xui-vip-commission">带来的佣金：<span>{{ vip_list.commission }}元</span></p>
