修复买赠赠品数量提示BUG 10901

--- a/weapp/mall/templates/mall/editor/promotion/create_premium_sale.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_premium_sale.html
@@ -346,7 +346,7 @@ $(document).ready(function() {
 				continue
 			}
 			var $tds = $tr.find('td');
-			$('<td class="pr"><input name="count" class="form-control" value="1" data-validate="require-positive-int"/><span class="errorHint pa" style="left:5px" data-error-hint="请输入整数"></span></td><td class="pr"><input name="unit" class="form-control" data-validate="require-string" maxlength="5"/><span class="errorHint pa" style="left:5px" data-error-hint="不能为空"></span></td>').insertBefore($tds.eq(4));
+			$('<td class="pr"><input name="count" class="form-control" value="1" data-validate="require-positive-int"/><span class="errorHint pa" style="left:5px" data-error-hint="请输入正整数"></span></td><td class="pr"><input name="unit" class="form-control" data-validate="require-string" maxlength="5"/><span class="errorHint pa" style="left:5px" data-error-hint="不能为空"></span></td>').insertBefore($tds.eq(4));
 			$tds.eq(0).remove();
 			$tr.find('.xa-showAllModels').remove();
 
